java 11 code changed to java 8.1